c4prj2_input/grade.txt
Grading at Thu Jan 17 09:17:48 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:42:3: error: expected declaration or statement at end of input
   }
   ^
Compilation of future.c failed

Overall Grade: F
